add coverage remove unused code

--- a/KidsTimer.xcworkspace/xcshareddata/xcschemes/UITests.xcscheme
+++ b/KidsTimer.xcworkspace/xcshareddata/xcschemes/UITests.xcscheme
@@ -10,7 +10,18 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "0030E4E8206D6FBF00921B09"
+            BuildableName = "CountdownTimer.app"
+            BlueprintName = "CountdownTimer"
+            ReferencedContainer = "container:KidsTimer.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
