--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: swift
+osx_image: xcode10.1
 xcode_project: KidsTimer.xcodeproj
 xcode_scheme: CountdownTimer
 xcode_destination: platform=iOS Simulator,OS=12.1,name=iPhone XR
