--- a/KidsTimer.xcworkspace/xcshareddata/xcschemes/CountdownTimer.xcscheme
+++ b/KidsTimer.xcworkspace/xcshareddata/xcschemes/CountdownTimer.xcscheme
@@ -51,7 +51,7 @@
             </BuildableReference>
          </TestableReference>
          <TestableReference
-            skipped = "YES">
+            skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "4B8555D02155AAF300BFB6CF"
