--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,7 @@ osx_image: xcode10.1
 xcode_workspace: KidsTimer.xcworkspace
 xcode_scheme: CountdownTimer
 xcode_destination: platform=iOS Simulator,OS=12.1,name=iPhone XR
+git:
+  depth: false
+install: skip
+after_success: bash <(curl -s 'https://codecov.io/bash') -Z -X gcov -X fix
